assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

/* Variables */

$color-dark: #111111 !default;
$color-light: #ffffff !default;
$color-main: #f2a23a !default;

$wrapper-width: 900px !default;

/* General */

* {
  box-sizing: border-box;
}

body {
  font: 100% "Helvetica Neue", Arial, sans-serif;
  margin: 0;
  padding: 0;
  background-color: $color-light;
}

p {
  line-height: 1.5;
}

.wrapper {
  max-width: $wrapper-width;
  margin: 2rem auto;
}

.background-main {
  background-color: $color-main;
}

/* Header */

header {
  a {
    display: block;
    text-decoration: none;
    color: $color-dark;

    .hidden-title {
      display: none;
    }

    .site-logo {
      display: block;
      width: 40rem;
      max-width: 100%;
      margin: 0 auto;
    }

    .site-subtitle {
      text-align: center;
      font-size: 4rem;
    }
  }

  nav {

    input, label {
      display: none;
    }

    ul {
      padding: 0;
      list-style: none;
      display: grid;
      grid-template-columns: auto auto auto auto auto; //Add more columns if needed

      li {
          margin: 0.1rem
      }
    }
  }
}

.button {
  font-weight: bold;
  margin: 0 .1rem;
  padding: .9rem;
  background-color: $color-main;
  color: $color-light;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  width: 100%;

  &:hover {
    cursor:pointer;
    opacity: 0.8;
  }
}

main {
  .columns {
    display: grid;
    grid-template-areas:
            "about aside"
            "events aside";
    grid-template-columns: 2fr 1fr;
  }

  #about {
    grid-area: about;
  }

  #events {
    grid-area: events;
  }

  section {
    padding: .5rem .5rem;
  }

  aside {
    grid-area: aside;
    padding: 0.5rem 1.5rem;
    border-left: 1px solid $color-main;
    //background-color: #ebddc7;

    .social {
      list-style: none;
      display: flex;
      margin: 0;
      padding: 0;

      a {
        padding: 0.5rem;

        svg {
          width: 1rem;
          height: 1rem;
        }
      }
    }
  }

  #team {
    background-color: $color-main;

    h2 {
      text-align: center;
      color: $color-light;
    }

    ul {
      list-style: none;
      margin: 0;
      padding: 0;
      text-align: center;

      li {
        display: inline-block;
        position: relative;
        width: 12rem;
        height: 12rem;
        margin: 0.4rem 0.3rem;

        .front {
          position: absolute;
          bottom: 0;
          top: 0;
          animation: flipVisible 250ms;

          img {
            max-width: 100%;
          }

          h3 {
            color: $color-light;
            text-shadow: 0 0 0.3rem $color-dark;
            position: absolute;
            bottom: 0;
            width: 100%;
          }
        }

        .back {
          background-color: $color-light;
          margin: 0;
          position: absolute;
          bottom: 0;
          top: 0;
          width: 100%;
          padding: 1rem;
          transform: rotateY(-90deg);
          animation: flipAway 250ms;
        }

        &:hover .front {
          animation: flipAway 250ms forwards;
        }

        &:hover .back {
          animation: flipVisible 250ms forwards;
        }
      }
    }
  }
}

@keyframes flipAway {
  0% {
    transform: rotateY(0deg);
  }

  50% {
    transform: rotateY(90deg);
  }

  100% {
    transform: rotateY(90deg);
  }
}

@keyframes flipVisible {
  0% {
    transform: rotateY(-90deg);
  }

  50% {
    transform: rotateY(-90deg);
  }

  100% {
    transform: rotateY(0deg);
  }
}

.post-list {
    list-style: none;
    margin: 0;
    padding: 0;

    li {
      padding: 0.5rem 1rem;
      margin: 1rem 0;

      &:not(:first-child) {
        border-top: 1px solid $color-dark;
      }

      a {
        color: $color-dark;
        text-decoration: none;
      }

      h3 {
        margin: 0 0 0.7rem 0;
      }

      .ellipsis {
        text-align: center;
      }
    }
}

footer {
  p {
    text-align: center;
  }
}

@media screen and (max-width: 480px) {
  main {
    .columns {
      grid-template-areas: "about" "events" "aside";
      grid-template-columns: initial;
    }

    aside {
      border-left: none;
    }

    aside::before {
      content: "";
      display: block;
      background-color: $color-main;
      height: 1px;
      width: 100%;
    }
  }
}

